# krusader-trinity

./: CMakeL10n.txt  CVSNEWS  ChangeLog  FAQ  INSTALL  Krusader.kdevelop  Krusader.tdevelop  Makefile.am  README  acinclude.m4  config.h.in  configure.in  configure.in.in  krusader-1.40.info  krusader-1.50.info  krusader-1.60.info  krusader-1.70.info  krusader-1.80.info  krusader.SlackBuild  krusader.kdevprj  krusader.lsm  krusader.spec  subdirs
doc/: ChangeLog  Makefile.am  krusader.1  update_docbook  update_po  update_pot
doc/en/: Makefile.am  archives.docbook  bookmarks.docbook  commands.docbook  configuration-files.docbook  credits.docbook  editors-note.docbook  faq.docbook  features.docbook  glossary.docbook  help.docbook  index.docbook  installation.docbook  introduction.docbook  java.docbook  keyboard.docbook  konfigurator.docbook  krusader-tools.docbook  more.docbook  mouse.docbook  release-overview.docbook  remote-connections.docbook  user-interface.docbook  useraction-xml.docbook  useractions.docbook  using-krusader.docbook  vfs.docbook  viewer-editor.docbook
doc/pics/: Makefile.am
doc/ru/: Makefile.am  commands.docbook  configuration-files.docbook  credits.docbook  editors-note.docbook  faq.docbook  features.docbook  glossary.docbook  help.docbook  index.docbook  installation.docbook  introduction.docbook  keyboard.docbook  konfigurator.docbook  krusader-tools.docbook  mouse.docbook  release-overview.docbook  user-interface.docbook  useraction-xml.docbook  using-krusader.docbook
iso/: Makefile.am  iso.cpp  kiso.cpp  kiso.h  qfilehack.cpp  qfilehack.h
iso/libisofs/: bswap.h  configure.in.in  iso_fs.h  isofs.c  isofs.h
krArc/: CMakeL10n.txt  Makefile.am  krarc.cpp  krarc.h  krarc.protocol
krusader/: CMakeL10n.txt  Makefile.am  calc.ui  defaults.h  kicons.cpp  kicons.h  krservices.cpp  krservices.h  krslots.cpp  krslots.h  krusader.cpp  krusader.desktop  krusader.h  krusader_root-mode.desktop  krusaderapp.h  krusaderview.cpp  krusaderview.h  main.cpp  mount.ui  panelmanager.cpp  panelmanager.h  paneltabbar.cpp  paneltabbar.h  recode.ui  useraction_examples.xml  x-ace.desktop
krusader/ActionMan/: actionman.cpp  actionman.h  actionproperty.cpp  actionproperty.h  actionpropertybase.cpp  actionpropertybase.ui  addplaceholderpopup.cpp  addplaceholderpopup.h  useractionlistview.cpp  useractionlistview.h  useractionpage.cpp  useractionpage.h
krusader/BookMan/: kraddbookmarkdlg.cpp  kraddbookmarkdlg.h  krbookmark.cpp  krbookmark.h  krbookmarkbutton.cpp  krbookmarkbutton.h  krbookmarkhandler.cpp  krbookmarkhandler.h
krusader/Dialogs/: checksumdlg.cpp  checksumdlg.h  krdialogs.cpp  krdialogs.h  krkeydialog.cpp  krkeydialog.h  krmaskchoice.cpp  krmaskchoice.h  krpleasewait.cpp  krpleasewait.h  krprogress.cpp  krprogress.h  krspecialwidgets.cpp  krspecialwidgets.h  krspwidgets.cpp  krspwidgets.h  krsqueezedtextlabel.cpp  krsqueezedtextlabel.h  kurllistrequester.cpp  kurllistrequester.h  newftpgui.cpp  newftpgui.h  packgui.cpp  packgui.h  packguibase.cpp  packguibase.h  percentalsplitter.cpp  percentalsplitter.h  popularurls.cpp  popularurls.h
krusader/DiskUsage/: diskusage.cpp  diskusage.h  diskusagegui.cpp  diskusagegui.h  dufilelight.cpp  dufilelight.h  dulines.cpp  dulines.h  dulistview.cpp  dulistview.h
krusader/Filter/: advancedfilter.cpp  advancedfilter.h  filterbase.h  filterdialog.cpp  filterdialog.h  filtertabs.cpp  filtertabs.h  generalfilter.cpp  generalfilter.h
krusader/GUI/: dirhistorybutton.cpp  dirhistorybutton.h  dirhistoryqueue.cpp  dirhistoryqueue.h  kcmdline.cpp  kcmdline.h  kcmdmodebutton.cpp  kcmdmodebutton.h  kfnkeys.cpp  kfnkeys.h  krremoteencodingmenu.cpp  krremoteencodingmenu.h  krusaderstatus.cpp  krusaderstatus.h  mediabutton.cpp  mediabutton.h  profilemanager.cpp  profilemanager.h  syncbrowsebutton.cpp  syncbrowsebutton.h
krusader/KViewer/: diskusageviewer.cpp  diskusageviewer.h  kimagefilepreview.cpp  kimagefilepreview.h  krviewer.cpp  krviewer.h  panelviewer.cpp  panelviewer.h
krusader/Konfigurator/: kgadvanced.cpp  kgadvanced.h  kgarchives.cpp  kgarchives.h  kgcolors.cpp  kgcolors.h  kgdependencies.cpp  kgdependencies.h  kggeneral.cpp  kggeneral.h  kglookfeel.cpp  kglookfeel.h  kgprotocols.cpp  kgprotocols.h  kgstartup.cpp  kgstartup.h  kguseractions.cpp  kguseractions.h  kgwelcome.cpp  kgwelcome.h  konfigurator.cpp  konfigurator.h  konfiguratoritems.cpp  konfiguratoritems.h  konfiguratorpage.cpp  konfiguratorpage.h  krresulttable.cpp  krresulttable.h  krresulttabledialog.cpp  krresulttabledialog.h  searchobject.cpp  searchobject.h
krusader/KrJS/: krjs.cpp  krjs.h
krusader/Locate/: locate.cpp  locate.h
krusader/MountMan/: kdiskfreesp.cpp  kdiskfreesp.h  kmountman.cpp  kmountman.h  kmountmangui.cpp  kmountmangui.h
krusader/Panel/: krbriefview.cpp  krbriefview.h  krbriefviewitem.cpp  krbriefviewitem.h  krcalcspacedialog.cpp  krcalcspacedialog.h  krcolorcache.cpp  krcolorcache.h  krdetailedview.cpp  krdetailedview.h  krdetailedviewitem.cpp  krdetailedviewitem.h  krdrag.cpp  krdrag.h  krpopupmenu.cpp  krpopupmenu.h  krpreviewpopup.cpp  krpreviewpopup.h  krselectionmode.cpp  krselectionmode.h  krview.cpp  krview.h  krviewitem.cpp  krviewitem.h  listpanel.cpp  listpanel.h  panelfunc.cpp  panelfunc.h  panelpopup.cpp  panelpopup.h
krusader/Queue/: queue.cpp  queue.h  queue_mgr.cpp  queue_mgr.h  queuewidget.h
krusader/RemoteMan/: remoteman.cpp  remoteman.h  remotemanbase.cpp  remotemanbase.h
krusader/Search/: krsearchdialog.cpp  krsearchdialog.h  krsearchmod.cpp  krsearchmod.h
krusader/Splitter/: combiner.cpp  combiner.h  splitter.cpp  splitter.h  splittergui.cpp  (+1 more)
po/: Makefile.am  bg.po  bs.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  fr.po  hu.po  it.po  ja.po  krusader.pot  lt.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sl.po  sr.po  sr@Latn.po  sv.po  tdeio_krarc.pot  tdeio_virt.pot  tr.po  uk.po  zh_CN.po
tar/: Makefile.am  ar.protocol  tar.cc  tar.cpp  tar.h
tdeconf_update/: Makefile.am  krusader_tqt_selection.upd
virt/: CMakeL10n.txt  Makefile.am  virt.cc  virt.cpp  virt.h  virt.protocol
(+73 files in other folders)
